welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:9: error: Missing closing brace `}' assumed here
}
^ZigZag:11: error: expected class or object definition
def fin() :Boolean={
^ZigZag:33: error: expected class or object definition
def parcoursDouble(x:Int,y:Int,d:Boolean) :Boolean={
^ZigZag:36: error: Missing closing brace `}' assumed here
    setPos(x,y+1)
    ^