welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var compteur = 1
  var d= true
  ecritMessage(0)
  while(!fin()) {
    d = parcoursDouble(getX(),getY(),d)
    ecritMessage(compteur)
    compteur =compteur+1
  }
}

def fin() :Boolean={
  if (getX()==getMondeLargeur()-1 && getY()==getMondeHauteur()-1) return true
  else return false
}


/*def parcoursGauche(x:Int,y:Int) {
  if (x==getMondeLargeur()-1) {
    setPos(x,y+1)
   	parcoursDroite(x,y)
  }
  else setPos(x+1,y)
}

def parcoursDroite(x:Int,y:Int) {
  if (x==0) {
    setPos(x,y+1)
   	parcoursGauche(x,y)
  }
  else setPos(x-1,y)
}*/

def parcoursDouble(x:Int,y:Int,d:Boolean) :Boolean={
  if (d) {
    if (x==getMondeLargeur()-1) {
    setPos(x,y+1)
   	return (!d)
  }
    else {
      setPos(x+1,y)
      return d
  }
  else {
    if (x==0) {
    setPos(x,y+1)
   	return(!d)
  }
    else {
      setPos(x-1,y)
      return d
  }
}